infra/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-command-service
  namespace: sistema
  labels:
    app: wg-command
spec:
  selector:
    app: wg-command
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
