infra/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-command-service
  namespace: sistema
  labels:
    app: wg-command
spec:
  type: LoadBalancer
  selector:
    app: wg-command
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
